# embedded-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
examples/: demo.py
src/embedded_mcp/: __init__.py  server.py
tests/: test_decode_register.py  test_flash.py  test_svd.py
tests/fixtures/: sample.svd
